--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <td>Első</td>
                 <td><a href="https://szarkanorbi.github.io/2024szft/">https://szarkanorbi.github.io/2024szft/</a></td>
             </tr>
+            <tr>
+                <td>Második</td>
+                <td><a https://szarkanorbi.github.io/09.11-gyak/</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
