--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <tbody>
             <tr>
                 <td>Első</td>
-                <td><a href="https://szarkanorbi.github.io/2024szft/">https://szarkanorbi.github.io/2024szft/</a></td>
+                <td><a href="https://szarkanorbi.github.io/2024szft/">Első/</a></td>
             </tr>
             <tr>
                 <td>Második</td>
-                <td><a href="https://szarkanorbi.github.io/09.11-gyak/">https://szarkanorbi.github.io/09.11-gyak/</a></td>
+                <td><a href="https://szarkanorbi.github.io/09.11-gyak/">09.11-gyak/</a></td>
             </tr>
         </tbody>
     </table>
