--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Szarka-Kovács Norbert</h1>
-    <table style="border-radious: 2px solid black;">
+    <table style="border-radius: 2px solid black;">
         <thead>
             <th>Cím</th>
             <th>Link</th>
