--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <table style="border: 2px solid black;">
         <thead>
             <th>Cím</th>
+            <th>Dátum</th>
             <th>Link</th>
         </thead>
         <tbody>
