--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </thead>
         <tbody>
             <tr>
-                <td>Első</td>
+                <td>Színek</td>
                 <td><a href="https://szarkanorbi.github.io/2024szft/">Első</a></td>
             </tr>
             <tr>
-                <td>Második</td>
+                <td>Szöveg</td>
                 <td><a href="https://szarkanorbi.github.io/09.11-gyak/">09.11-gyak</a></td>
             </tr>
         </tbody>
