--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <tr>
                 <td>Színek</td>
                 <td>09.05</td>
-                <td><a href="https://szarkanorbi.github.io/2024szft/">Első</a></td>
+                <td><a href="https://szarkanorbi.github.io/2024szft/">Katt</a></td>
             </tr>
             <tr>
                 <td>Szöveg</td>
                 <td>09.11</td>
-                <td><a href="https://szarkanorbi.github.io/09.11-gyak/">09.11-gyak</a></td>
+                <td><a href="https://szarkanorbi.github.io/09.11-gyak/">Katt</a></td>
             </tr>
         </tbody>
     </table>
