--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <td>09.11</td>
                 <td><a href="https://szarkanorbi.github.io/09.11-gyak/">Katt</a></td>
             </tr>
+            <tr>
+                <td>Összeadás</td>
+                <td>09.11</td>
+                <td><a href="https://szarkanorbi.github.io/osszeadas_gyak/">Katt</a></td>
+            </tr>            
         </tbody>
     </table>
 </body>
