--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <td>Összeadás</td>
                 <td>09.11</td>
                 <td><a href="https://szarkanorbi.github.io/osszeadas_gyak/">Katt</a></td>
-            </tr>            
+            </tr>   
+            <tr>
+                <td>Számológép</td>
+                <td>09.18</td>
+                <td><a href="https://szarkanorbi.github.io/Szamologep/">Katt</a></td>
+            </tr>               
         </tbody>
     </table>
 </body>
