--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
                 <td>Számológép</td>
                 <td>09.18</td>
                 <td><a href="https://szarkanorbi.github.io/Szamologep/">Katt</a></td>
-            </tr>               
+            </tr>   
+             <tr>
+                <td>Profit kalkulátor</td>
+                <td>11.13</td>
+                <td><a href="https://szarkanorbi.github.io/Profit_Kalkulator/">Katt</a></td>
+            </tr>      
         </tbody>
     </table>
 </body>
