--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 <td>Profit kalkulátor</td>
                 <td>11.13</td>
                 <td><a href="https://szarkanorbi.github.io/Profit_Kalkulator/">Katt</a></td>
+            </tr> 
+             <tr>
+                <td>Multiple Web Pages</td>
+                <td>12.04</td>
+                <td><a href="https://szarkanorbi.github.io/multiplepages/">Katt</a></td>
             </tr>      
         </tbody>
     </table>
