--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
                 <td>Multiple Web Pages</td>
                 <td>12.04</td>
                 <td><a href="https://szarkanorbi.github.io/multiplepages/">Katt</a></td>
-            </tr>      
+            </tr>  
+            <tr>
+                <td>Multiple Web Pages</td>
+                <td>12.12</td>
+                <td><a href="https://szarkanorbi.github.io/-rarend/">Katt</a></td>
+            </tr>  
+            
         </tbody>
     </table>
 </body>
