--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <td><a href="https://szarkanorbi.github.io/multiplepages/">Katt</a></td>
             </tr>  
             <tr>
-                <td>Multiple Web Pages</td>
+                <td>Órarend</td>
                 <td>12.12</td>
                 <td><a href="https://szarkanorbi.github.io/-rarend/">Katt</a></td>
             </tr>  
