--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
                 <td>12.12</td>
                 <td><a href="https://szarkanorbi.github.io/-rarend/">Katt</a></td>
             </tr>  
-            
+             <tr>
+                <td>Tetris</td>
+                <td>01.08</td>
+                <td><a href="https://szarkanorbi.github.io/tetris/">Katt</a></td>
+            </tr>         
         </tbody>
     </table>
 </body>
